[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 1 )

[node name="Start" type="Button" parent="."]
margin_left = 195.0
margin_top = 158.0
margin_right = 289.0
margin_bottom = 178.0
text = "CUTSCENE"

[node name="Start3" type="Button" parent="."]
margin_left = 193.0
margin_top = 198.0
margin_right = 292.0
margin_bottom = 218.0
text = "INSTRUCTION"

[node name="Start2" type="Button" parent="."]
margin_left = 181.0
margin_top = 101.0
margin_right = 300.0
margin_bottom = 136.0
text = "START"

[node name="Start4" type="Button" parent="."]
margin_left = 193.0
margin_top = 238.0
margin_right = 293.0
margin_bottom = 258.0
text = "CREDITS"

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.5
margin_top = -99.0
margin_right = 141.5
margin_bottom = 99.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -29.0
margin_right = 58.5
margin_bottom = 50.0
text = "    Move: WASD
INTER: LMB/SPACE
     Dash: SHIFT
	     Attack: J"

[node name="close" type="Button" parent="Panel"]
margin_left = 115.5
margin_top = 157.0
margin_right = 167.5
margin_bottom = 177.0
text = "CLOSE"

[node name="Panel2" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -99.0
margin_right = 190.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -29.5
margin_right = 176.0
margin_bottom = 29.5
text = "https://www.youtube.com/watch?v=7A4EPIr-6Sc&t=635"

[node name="close" type="Button" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = 66.0
margin_right = 26.0
margin_bottom = 86.0
text = "CLOSE"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Start3" to="." method="_on_Start3_pressed"]
[connection signal="pressed" from="Start2" to="." method="_on_Start2_pressed"]
[connection signal="pressed" from="Start4" to="." method="_on_Start4_pressed"]
[connection signal="pressed" from="Panel/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel2/close" to="." method="_on_close_pressed"]
